--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -6,9 +6,14 @@ spring:
     url: jdbc:postgresql://localhost:5432/members
     username: postgres
     password: MorIng820401
+    driver-class-name: org.postgresql.Driver
   jpa:
     properties:
       hibernate:
-        dialect: org.hibernate.dialect.PostgreSQLDialect
-        ddl-auto: none
-        show_sql: true
+        ddl-auto: update
+    open-in-view: false
+  security:
+    user:
+      name: admin
+      password: secretpassword
+      roles: ADMIN
